<resources>
    <string name="app_name">MyProject</string>
    <string name="user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="register_button">Register Now</string>
    <string name="food">Food</string>
    <string name="fund">Fund</string>
    <string name="goods">Goods</string>
    <string name="services">Services</string>
    <string name="service">Service</string>
    <string name="unselservice">Service</string>
    <string name="unselgoods">Goods</string>
    <string name="unselfund">Fund</string>
    <string-array name="array1">
        <item>Login as beneficiary</item>
        <item>Login as donor</item>
    </string-array>
    <string-array name="array2">
        <item>Break fast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="array3">
        <item>Furnitures</item>
        <item>Electronic Items</item>
        <item>Clothes</item>
        <item>Books</item>
        <item>Others</item>
    </string-array>
    <string-array name="array4">
        <item>Education</item>
        <item>Health</item>
        <item>Awareness</item>
        <item>Others</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="A">Type</string>
    <string name="typeToDisplay" />
    <string name="cost">Cost</string>
    <string name="noteE">"Note : "</string>
    <string name="note">Note</string>
    <string name="btnFood">Send Request</string>
    <string name="typegoods">Type</string>
    <string name="btnGoods">Send Request</string>
    <string name="typegoods_items">Items</string>
    <string name="btnServices">Send Request</string>
</resources>